<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Activities</string>
    <string name="action_settings">Settings</string>
    <string name="activities">Activities</string>
    <string name="title_activity1">Activity 1</string>
    <string name="title_activity2">Activity 2</string>
    <string name="title_activity3">Activity 3</string>
    <string name="activity_1">Activity 1</string>
    <string name="button_1">Get Activity 1 (stack)</string>
    <string name="button_2">Get Activity 2</string>
    <string name="button_3">Get Activity 3</string>
    <string name="button_open_browser">Open Browser</string>
    <string name="button_call">Call</string>
</resources>