<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   	 >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activities"
        android:layout_gravity="center"
    />

	<Button
    	android:id="@+id/button1"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/button_1"
		android:layout_gravity="center"
	 />
	
	<Button
    	android:id="@+id/button2"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/button_2"
		android:layout_gravity="center"
	 />
	
	<Button
    	android:id="@+id/button3"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/button_3"
		android:layout_gravity="center"
	 />
	
	<Button
    	android:id="@+id/button_open_browser"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/button_open_browser"
		android:layout_gravity="center"
	 />
		
		
	<Button
    	android:id="@+id/button_call"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/button_call"
		android:layout_gravity="center"
	 />
</LinearLayout>
